--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;600&family=IBM+Plex+Sans:wght@700&family=IBM+Plex+Serif:wght@400;500&display=swap" rel="stylesheet">
 
   <!-- Single SVG favicon -->
-  <link rel="icon" href="/favicon.svg" type="image/svg+xml">
+  <link rel="icon" href="favicon.svg" type="image/svg+xml">
 
   <style>
     :root{
@@ -54,7 +54,7 @@
 <body>
   <!-- Blank canvas: only the favicon in the top-left -->
   <a class="brand-mark" href="#" aria-label="Philipp Maths and Physics home">
-    <img src="/favicon.svg" alt="Philipp favicon">
+    <img src="favicon.svg" alt="Philipp favicon">
   </a>
 </body>
 </html>
