let's test lcp with giant 12MB image

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
     .brand-mark:focus{outline:2px solid var(--murberry);outline-offset:4px;border-radius:8px}
   </style>
 </head>
+<img src="/assets/your-image.jpg" alt="Hero Image" style="width:100%; height:auto; display:block;">
 <body>
   <!-- Blank canvas: only the favicon in the top-left -->
   <a class="brand-mark" href="#" aria-label="Philipp Maths and Physics home">
