--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
     .brand-mark:focus{outline:2px solid var(--murberry);outline-offset:4px;border-radius:8px}
   </style>
 </head>
-<img src="/assets/your-image.jpg" alt="Hero Image" style="width:100%; height:auto; display:block;">
+<img src="wild-deer-nature.jpg" alt="Hero Image" style="width:100%; height:auto; display:block;">
+<img src="mediterranean-chameleon-basking-walking-garigue-vegetation-malta.jpg" alt="Hero Image" style="width:100%; height:auto; display:block;">
 <body>
   <!-- Blank canvas: only the favicon in the top-left -->
   <a class="brand-mark" href="#" aria-label="Philipp Maths and Physics home">
