--- a/index.html
+++ b/index.html
@@ -67,6 +67,10 @@
 })();
 </script>
 
+<script>
+  gtag('config', 'G-ZYTSZ8BF4Z', { debug_mode: true });
+</script>
+
   <style>
     :root{
       --murberry:#c65a72; /* brand accent */
