--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     window.dataLayer = window.dataLayer || [];
     function gtag(){ dataLayer.push(arguments); }
     gtag('js', new Date());
-    gtag('config', 'G-ZYTSZ8BF4Z', { debug_mode: true });
+    gtag('config', 'G-ZYTSZ8BF4Z');
   </script>
 
   <!-- LCP to GA4 -->
@@ -108,9 +108,6 @@
   <a class="brand-mark" href="#" aria-label="Philipp Maths and Physics home">
     <img src="/favicon.svg" alt="Philipp favicon">
   </a>
-
-  <img src="wild-deer-nature.jpg" alt="Hero Image" style="width:100%; height:auto; display:block;">
-  <img src="mediterranean-chameleon-basking-walking-garigue-vegetation-malta.jpg" alt="Hero Image" style="width:100%; height:auto; display:block;">
 
   <!-- Optional: lightweight click tracking for future buttons/links -->
   <script>
