--- a/index.html
+++ b/index.html
@@ -118,6 +118,88 @@
       outline-offset:4px;
       border-radius:12px;
     }
+
+    /* --- Hero section --- */
+    .hero{
+      background: linear-gradient(90deg, var(--murberry) 0%, var(--stone) 100%);
+      padding: clamp(48px, 10vw, 96px) 0;
+      margin-top: 0;
+    }
+    .hero-inner{
+      max-width: 1120px;
+      margin: 0 auto;
+      padding: 0 16px;
+      display: grid;
+      grid-template-columns: 1fr;
+      gap: 28px;
+      align-items: center;
+    }
+    @media (min-width: 900px){
+      .hero-inner{
+        grid-template-columns: 1.1fr 0.9fr;
+        gap: 40px;
+      }
+    }
+    .hero-left{
+      color: var(--ink);
+    }
+    .hero-title{
+      margin: 0 0 12px 0;
+      font-size: clamp(28px, 4vw, 42px);
+      line-height: 1.1;
+      letter-spacing: -0.01em;
+    }
+    .proofs{
+      margin: 0 0 20px 0;
+      padding: 0;
+      list-style: none;
+    }
+    .proofs li{
+      display: flex;
+      align-items: baseline;
+      gap: 10px;
+      margin: 8px 0;
+      font-size: clamp(14px, 2.2vw, 16px);
+    }
+    .proofs li::before{
+      content: "✓";
+      font-family: "IBM Plex Sans", ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif;
+      font-weight: 700;
+      color: var(--teal);
+    }
+
+    .btn-primary{
+      display: inline-block;
+      padding: 12px 18px;
+      border-radius: 12px;
+      background: var(--murberry);
+      color: var(--paper);
+      text-decoration: none;
+      font-family: "IBM Plex Sans", ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif;
+      font-weight: 700;
+      letter-spacing: 0.01em;
+      transition: transform .05s ease, filter .15s ease, opacity .15s ease;
+      will-change: transform;
+    }
+    .btn-primary:hover{ filter: brightness(0.95); }
+    .btn-primary:active{ transform: translateY(1px); opacity: 0.9; }
+    .btn-primary:focus-visible{
+      outline: 2px solid var(--ink);
+      outline-offset: 3px;
+      border-radius: 12px;
+    }
+
+    .hero-right{
+      justify-self: center;
+    }
+    .hero-right img{
+      width: min(100%, 520px);
+      height: auto;
+      border-radius: 16px;
+      display: block;
+      box-shadow: 0 2px 24px rgba(11, 31, 58, 0.15);
+      background: var(--paper);
+    }
   </style>
 </head>
 <body>
@@ -125,6 +207,25 @@
   <a class="brand-mark" href="#" aria-label="Philipp Maths and Physics home">
     <img src="/favicon.svg" alt="Philipp favicon">
   </a>
+  <section class="hero" role="banner">
+    <div class="hero-inner">
+      <div class="hero-left">
+        <h1 class="hero-title">Premium 1 to 1 A Level Maths and Physics</h1>
+        <ul class="proofs">
+          <li>4×A*</li>
+          <li>Top 0.03% nationwide</li>
+          <li>295/300 Maths</li>
+          <li>100% Pure 1</li>
+          <li>98% Computer Science Paper 1</li>
+        </ul>
+        <a class="btn-primary" href="https://calendly.com/philippmathsphysics/consult" data-gtag-event="book_consult_click" aria-label="Book a consult on Calendly">Book consult</a>
+      </div>
+      <div class="hero-right">
+        <!-- Replace the src with your actual photo path -->
+        <img src="/assets/philipp.jpg" alt="Philipp Bogdan" width="480" height="560" loading="eager" decoding="async">
+      </div>
+    </div>
+  </section>
 
   <!-- Optional: lightweight click tracking for future buttons/links -->
   <script>
