--- a/index.html
+++ b/index.html
@@ -122,7 +122,12 @@
     /* --- Hero section --- */
     .hero{
       background-color: var(--murberry);
-      background: radial-gradient(circle farthest-corner at 0% 0%, var(--murberry) 0%, var(--murberry) 80%, var(--stone) 100%);
+      background: radial-gradient(
+        circle farthest-corner at 0% 0%,
+        var(--murberry) 0%,
+        var(--murberry) 72%,
+        #c77388 100%
+      );
       /* Full-viewport height with modern mobile-safe units + fallbacks */
       min-height: 100vh;
       min-height: 100svh;
