--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
       </div>
       <div class="hero-right">
         <!-- Replace the src with your actual photo path -->
-        <img src="/assets/philipp.jpg" alt="Philipp Bogdan" width="480" height="560" loading="eager" decoding="async">
+        <img src="/assets/philipp.png" alt="Philipp Bogdan" width="480" height="560" loading="eager" decoding="async">
       </div>
     </div>
   </section>
