ux: open Calendly in new tab (target=_blank + rel=noopener)

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
           <li class="chip"></li>
           <li class="chip"></li>
         </ul>
-        <a class="btn-primary" href="https://calendly.com/philippmathsphysics/consult" data-gtag-event="book_consult_click" aria-label="Book a consult on Calendly">Book consult</a>
+        <a class="btn-primary" href="https://calendly.com/philippmathsphysics/consult" target="_blank" rel="noopener" data-gtag-event="book_consult_click" aria-label="Book a consult on Calendly">Book consult</a>
       </div>
       <div class="hero-right">
         <!-- Replace the src with your actual photo path -->
