--- a/index.html
+++ b/index.html
@@ -239,7 +239,8 @@
       border: 1px solid rgba(11,31,58,0.10);
       filter: drop-shadow(0 18px 42px rgba(11,31,58,0.12));
     }
-  </style>
+</style>
+  <link rel="preload" as="image" href="/assets/philipp-1200.webp" type="image/webp" imagesrcset="/assets/philipp-800.webp 800w, /assets/philipp-1200.webp 1200w" imagesizes="(max-width: 900px) 90vw, 520px">
 </head>
 <body>
   <!-- Blank canvas: only the favicon in the top-left -->
@@ -256,7 +257,10 @@
       </div>
       <div class="hero-right">
         <!-- Replace the src with your actual photo path -->
-        <img src="/assets/philipp.png" alt="Philipp Bogdan" width="480" height="560" loading="eager" decoding="async">
+        <picture>
+          <source type="image/webp" srcset="/assets/philipp-800.webp 800w, /assets/philipp-1200.webp 1200w" sizes="(max-width: 900px) 90vw, 520px">
+          <img src="/assets/philipp-1200.webp" alt="Philipp Bogdan" width="1200" height="1600" loading="eager" fetchpriority="high">
+        </picture>
       </div>
     </div>
   </section>
