--- a/index.html
+++ b/index.html
@@ -235,12 +235,10 @@
       width: min(100%, 520px);
       height: auto;
       display: block;
-      border-radius: 16px;
-      border: 1px solid rgba(11,31,58,0.10);
       filter: drop-shadow(0 18px 42px rgba(11,31,58,0.12));
     }
 </style>
-  <link rel="preload" as="image" href="/assets/philipp-1200.webp" type="image/webp" imagesrcset="/assets/philipp-800.webp 800w, /assets/philipp-1200.webp 1200w" imagesizes="(max-width: 900px) 90vw, 520px">
+  <link rel="preload" as="image" href="/assets/philipp-1200.webp" type="image/webp" imagesrcset="/assets/philipp-800.webp 800w, /assets/philipp-1200.webp 1200w, /assets/philipp-1800.webp 1800w" imagesizes="(max-width: 900px) 90vw, 520px">
 </head>
 <body>
   <!-- Blank canvas: only the favicon in the top-left -->
@@ -258,7 +256,7 @@
       <div class="hero-right">
         <!-- Replace the src with your actual photo path -->
         <picture>
-          <source type="image/webp" srcset="/assets/philipp-800.webp 800w, /assets/philipp-1200.webp 1200w" sizes="(max-width: 900px) 90vw, 520px">
+          <source type="image/webp" srcset="/assets/philipp-800.webp 800w, /assets/philipp-1200.webp 1200w, /assets/philipp-1800.webp 1800w" sizes="(max-width: 900px) 90vw, 520px">
           <img src="/assets/philipp-1200.webp" alt="Philipp Bogdan" width="1200" height="1600" loading="eager" fetchpriority="high">
         </picture>
       </div>
