--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   <!-- Fonts: IBM Plex family -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;600&family=IBM+Plex+Sans:wght@700&family=IBM+Plex+Serif:wght@400;500&display=swap" rel="stylesheet">
+  <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;600&family=IBM+Plex+Sans:wght@700&family=IBM+Plex+Serif:wght@400;500&display=swap" onload="this.onload=null;this.rel='stylesheet'">
+  <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;600&family=IBM+Plex+Sans:wght@700&family=IBM+Plex+Serif:wght@400;500&display=swap"></noscript>
 
   <!-- Single SVG favicon -->
   <link rel="icon" href="/favicon.svg" type="image/svg+xml">
@@ -232,13 +233,13 @@
       width: clamp(90px, 18vw, 180px);
     }
     .hero-right img{
-      width: min(100%, 520px);
+      width: 100%;
       height: auto;
       display: block;
       filter: drop-shadow(0 18px 42px rgba(11,31,58,0.12));
     }
 </style>
-  <link rel="preload" as="image" href="/assets/philipp-1200.webp" type="image/webp" imagesrcset="/assets/philipp-800.webp 800w, /assets/philipp-1200.webp 1200w, /assets/philipp-1800.webp 1800w" imagesizes="(max-width: 900px) 90vw, 520px">
+  <link rel="preload" as="image" href="/assets/philipp-1200.webp" type="image/webp" imagesrcset="/assets/philipp-800.webp 800w, /assets/philipp-1200.webp 1200w, /assets/philipp-1800.webp 1800w" imagesizes="(max-width: 900px) 90vw, calc((min(1120px, 100vw) - 32px) * 0.45)">
 </head>
 <body>
   <!-- Blank canvas: only the favicon in the top-left -->
@@ -256,7 +257,7 @@
       <div class="hero-right">
         <!-- Replace the src with your actual photo path -->
         <picture>
-          <source type="image/webp" srcset="/assets/philipp-800.webp 800w, /assets/philipp-1200.webp 1200w, /assets/philipp-1800.webp 1800w" sizes="(max-width: 900px) 90vw, 520px">
+          <source type="image/webp" srcset="/assets/philipp-800.webp 800w, /assets/philipp-1200.webp 1200w, /assets/philipp-1800.webp 1800w" sizes="(max-width: 900px) 90vw, calc((min(1120px, 100vw) - 32px) * 0.45)">
           <img src="/assets/philipp-1200.webp" alt="Philipp Bogdan" width="1200" height="1600" loading="eager" fetchpriority="high">
         </picture>
       </div>
