--- a/index.html
+++ b/index.html
@@ -157,11 +157,14 @@
     .hero-left{
       color: var(--ink);
     }
-    .hero-title{
-      margin: 0 0 12px 0;
-      font-size: clamp(32px, 5vw, 56px);
-      line-height: 1.1;
-      letter-spacing: -0.01em;
+    .overline{
+      margin: 0 0 8px 0;
+      font-family: "IBM Plex Sans", ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif;
+      font-weight: 700;
+      font-size: 12px;
+      letter-spacing: 0.12em;
+      text-transform: uppercase;
+      color: rgba(11,31,58,0.75);
     }
     .proofs{
       margin: 0 0 20px 0;
@@ -249,9 +252,8 @@
   <section class="hero" role="banner">
     <div class="hero-inner">
       <div class="hero-left">
-        <div class="text-skeleton" aria-hidden="true">
-          <div class="placeholder"></div>
-        </div>
+        <div class="overline">Where precision meets understanding.</div>
+        <h1 class="hero-title">A Level Maths and Physics, taught for results.</h1>
         <a class="btn-primary" href="https://calendly.com/philippmathsphysics/consult" target="_blank" rel="noopener" data-gtag-event="book_consult_click" aria-label="Book a consult on Calendly">Book consult</a>
       </div>
       <div class="hero-right">
