--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
       position: absolute;
       left: 0; right: 0;
       bottom: -0.08em;          /* sit just below the baseline */
-      height: 0.45em;            /* underline thickness relative to font size */
+      height: 2.25em;            /* 5× thicker underline */
       background: url('/assets/underline.avif') center bottom/100% 100% no-repeat;
       pointer-events: none;
     }
