--- a/index.html
+++ b/index.html
@@ -166,14 +166,17 @@
       text-transform: uppercase;
       color: rgba(11,31,58,0.75);
     }
-    .u-underline{ position: relative; display: inline-block; }
+    .u-underline{ position: relative; display: inline-block; z-index: 0; }
     .u-underline::after{
       content: "";
       position: absolute;
       left: 0; right: 0;
-      bottom: -0.08em;          /* sit just below the baseline */
-      height: 2.25em;            /* 5× thicker underline */
+      bottom: -0.22em;          /* sit just below the baseline */
+      height: 0.45em;           /* base stroke height */
       background: url('/assets/underline.avif') center bottom/100% 100% no-repeat;
+      transform-origin: center bottom;
+      transform: scaleY(10);    /* 10× original thickness (5× more than previous) */
+      z-index: -1;              /* render behind the text */
       pointer-events: none;
     }
     .proofs{
