--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
     .u-underline::after{
       content: "";
       position: absolute;
-      left: 0; right: 0;
+      left: -1.0em; right: 1.0em;
       bottom: -1.30em;          /* sits under the baseline */
       height: 2.25em;           /* very thick underline */
       background: url('/assets/underline.avif') left bottom / 100% 100% no-repeat;
