--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
     }
     .hero-title{
       margin: 0 0 12px 0;
-      font-size: clamp(28px, 5vw, 56px);
+      font-size: calc(clamp(32px, 5vw, 56px) - 4px);
       line-height: 1.1;
       letter-spacing: -0.01em;
     }
@@ -176,7 +176,7 @@
     .u-underline::after{
       content: "";
       position: absolute;
-      left: -1.0em; right: 1.0em;
+      left: -7.5%; right: -7.5%;   /* 115% width (7.5% overflow on each side) */
       bottom: -1.30em;          /* sits under the baseline */
       height: 2.25em;           /* very thick underline */
       background: url('/assets/underline.avif') left bottom / 100% 100% no-repeat;
