--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
     .u-underline::after{
       content: "";
       position: absolute;
-      left: -7.5%; right: -7.5%;   /* 115% width (7.5% overflow on each side) */
+      left: -12.5%; right: -2.5%;   /* 115% width (7.5% overflow on each side) */
       bottom: -1.30em;          /* sits under the baseline */
       height: 2.25em;           /* very thick underline */
       background: url('/assets/underline.avif') left bottom / 100% 100% no-repeat;
@@ -269,7 +269,7 @@
   <section class="hero" role="banner">
     <div class="hero-inner">
       <div class="hero-left">
-        <div class="overline">Where precision meets understanding.</div>
+        <div class="overline">Core track</div>
         <h1 class="hero-title">A Level Maths and Physics, taught for <span class="u-underline">results</span>.</h1>
         <a class="btn-primary" href="https://calendly.com/philippmathsphysics/consult" target="_blank" rel="noopener" data-gtag-event="book_consult_click" aria-label="Book a consult on Calendly">Book consult</a>
       </div>
