--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
     .u-underline::after{
       content: "";
       position: absolute;
-      left: -12.5%; right: -2.5%;   /* 115% width (7.5% overflow on each side) */
+      left: -12.5%; right: -5.0%;   /* 120% width */
       bottom: -1.30em;          /* sits under the baseline */
       height: 2.25em;           /* very thick underline */
       background: url('/assets/underline.avif') left bottom / 100% 100% no-repeat;
