hero copy: 2-line heading, subtext, trust hook, CTA support; title→Philipp Tutoring

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Philipp Maths & Physics</title>
+  <title>Philipp Tutoring</title>
   <meta name="description" content="Premium A Level tutoring in Maths, Further Maths, Physics, and Computer Science.">
   <meta name="theme-color" content="#c65a72">
 
@@ -223,6 +223,26 @@
       outline-offset: 3px;
       border-radius: 12px;
     }
+    .hero-sub{
+      margin: 8px 0 16px 0;
+      max-width: 56ch;
+      color: rgba(11,31,58,0.78);
+      font-size: clamp(15px, 1.8vw, 18px);
+    }
+    .trust-hook{
+      margin: 10px 0 18px 0;
+      font-family: "IBM Plex Sans", ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif;
+      font-weight: 700;
+      font-size: 14px;
+      letter-spacing: 0.06em;
+      color: rgba(11,31,58,0.85);
+      text-transform: none;
+    }
+    .cta-sub{
+      margin-top: 6px;
+      font-size: 14px;
+      color: rgba(11,31,58,0.65);
+    }
 
     /* Hero text placeholders (structure only) */
     .text-skeleton{ margin: 0 0 16px 0; }
@@ -263,15 +283,18 @@
 </head>
 <body>
   <!-- Blank canvas: only the favicon in the top-left -->
-  <a class="brand-mark" href="#" aria-label="Philipp Maths and Physics home">
+  <a class="brand-mark" href="#" aria-label="Philipp Tutoring home">
     <img src="/favicon.svg" alt="Philipp favicon">
   </a>
   <section class="hero" role="banner">
     <div class="hero-inner">
       <div class="hero-left">
         <div class="overline">Core track</div>
-        <h1 class="hero-title">A Level Maths and Physics, taught for <span class="u-underline">results</span>.</h1>
+        <h1 class="hero-title">A Level Maths and Physics,<br><span class="u-underline">taught for results</span></h1>
+        <p class="hero-sub">Measured outcomes across 5 performance indicators, not just promises.</p>
+        <div class="trust-hook">4×A* Imperial College Computing (AI)</div>
         <a class="btn-primary" href="https://calendly.com/philippmathsphysics/consult" target="_blank" rel="noopener" data-gtag-event="book_consult_click" aria-label="Book a consult on Calendly">Book consult</a>
+        <div class="cta-sub">No charge • 20 min</div>
       </div>
       <div class="hero-right">
         <!-- Replace the src with your actual photo path -->
