--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
   <style>
     :root{
-      --murberry:#c65a72; /* brand accent */
+      --mulberry:#c65a72; /* brand accent */
       --stone:#cbd5e1;    /* undertones */
       --paper:#f7f5f2;    /* background */
       --teal:#0d9488;     /* positive highlights */
@@ -105,7 +105,7 @@
       position:absolute;
       inset:0;
       border-radius:12px;
-      background: rgba(198, 90, 114, 0.18); /* murberry with opacity */
+      background: rgba(198, 90, 114, 0.18); /* mulberry with opacity */
       opacity:0;
       transition: opacity .15s ease-in-out;
       pointer-events:none;
@@ -115,7 +115,7 @@
 
     /* Keep accessibility: show focus ring for keyboard nav only */
     .brand-mark:focus-visible{
-      outline:2px solid var(--murberry);
+      outline:2px solid var(--mulberry);
       outline-offset:4px;
       border-radius:12px;
     }
@@ -207,7 +207,7 @@
       display: inline-block;
       padding: 12px 18px;
       border-radius: 12px;
-      background: var(--murberry);
+      background: var(--mulberry);
       color: var(--paper);
       border: 1px solid rgba(11,31,58,0.10);
       text-decoration: none;
