--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
         <div class="overline">Core track</div>
         <h1 class="hero-title">A Level Maths and Physics,<br>taught for <span class="u-underline">results</span></h1>
         <p class="hero-sub">Measured outcomes across 5 performance indicators, not just promises.</p>
-        <div class="trust-hook">4×A* Imperial College Computing (AI)</div>
+        <div class="trust-hook">4×A* Imperial College Computing (AI) | Top 100 UK by CS A Level Results</div>
         <a class="btn-primary" href="https://calendly.com/philippmathsphysics/consult" target="_blank" rel="noopener" data-gtag-event="book_consult_click" aria-label="Book a consult on Calendly">Book consult</a>
         <div class="cta-sub">No charge • 20 min</div>
       </div>
