--- a/index.html
+++ b/index.html
@@ -156,6 +156,27 @@
     }
     .hero-left{
       color: var(--ink);
+      position: relative;
+      z-index: 0; /* establish stacking context for the backdrop */
+    }
+    .hero-left::before{
+      content: "";
+      position: absolute;
+      /* create padded backdrop that hugs the text block */
+      inset: -16px -16px -16px -16px;
+      background: rgba(247,245,242,0.92); /* paper with high opacity for contrast */
+      border: 1px solid rgba(11,31,58,0.08);
+      border-radius: 16px;
+      box-shadow: 0 12px 36px rgba(11,31,58,0.10);
+      backdrop-filter: blur(2px);
+      -webkit-backdrop-filter: blur(2px);
+      z-index: -1; /* sit behind the text but above the hero background */
+    }
+    @media (max-width: 600px){
+      .hero-left::before{ inset: -12px; } /* tighter on phones */
+    }
+    @media (min-width: 1200px){
+      .hero-left::before{ inset: -20px -20px -20px -24px; } /* a hair wider on large screens */
     }
     .overline{
       margin: 0 0 8px 0;
@@ -226,7 +247,7 @@
     .hero-sub{
       margin: 8px 0 16px 0;
       max-width: 56ch;
-      color: rgba(11,31,58,0.78);
+      color: rgba(11,31,58,0.88);
       font-size: clamp(15px, 1.8vw, 18px);
     }
     .trust-hook{
@@ -298,7 +319,7 @@
         <div class="overline">Core track</div>
         <h1 class="hero-title">A Level Maths and Physics,<br>taught for <span class="u-underline">results</span></h1>
         <p class="hero-sub">Measured outcomes across 5 performance indicators, not just promises.</p>
-        <div class="trust-hook">4×A* Imperial College Computing (AI) | Top 100 UK by CS A Level Results</div>
+        <div class="trust-hook">4×A* Imperial College Computing (AI) | 295/300 (98%) A Level Maths | BPhO Gold </div>
         <a class="btn-primary" href="https://calendly.com/philippmathsphysics/consult" target="_blank" rel="noopener" data-gtag-event="book_consult_click" aria-label="Book a consult on Calendly">Book consult</a>
         <div class="cta-sub">No charge • 20 min</div>
       </div>
